--- a/index.html
+++ b/index.html
@@ -19,13 +19,10 @@
               niva: {
                 bg: '#09090b', // zinc-950
                 surface: '#18181b', // zinc-900
-                // Updated Brand Colors extracted from SVG
-                // Using the mid-tone orange as primary highlight for visibility
                 highlight: '#FB6900', 
                 highlightDim: 'rgba(251, 105, 0, 0.15)',
                 text: '#f4f4f5', // zinc-100
                 muted: '#a1a1aa', // zinc-400
-                // Full palette reference
                 brand: {
                   red: '#A40000',
                   redLight: '#C81D03',
@@ -65,29 +62,30 @@
         width: 100%;
         height: 100%;
       }
-      /* Hide scrollbar for Chrome, Safari and Opera */
       .no-scrollbar::-webkit-scrollbar {
           display: none;
       }
-      /* Hide scrollbar for IE, Edge and Firefox */
       .no-scrollbar {
-          -ms-overflow-style: none;  /* IE and Edge */
-          scrollbar-width: none;  /* Firefox */
+          -ms-overflow-style: none;
+          scrollbar-width: none;
       }
     </style>
   <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.3"
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.89.0",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
